--- a/skeleton-loading-animation/index.html
+++ b/skeleton-loading-animation/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sekeleton Loading Animation</title>
+  <title>Skeleton Loading Animation</title>
   <style>
     .container {
       display: grid;
@@ -17,6 +17,7 @@
 <body>
   <div class="container">
     <card-skeleton></card-skeleton>
+    
   </div>
 
   <script src="main.js"></script>
